--- a/programming/git/github.html
+++ b/programming/git/github.html
@@ -14,5 +14,5 @@ layout: git
 <section>
     <h2>Why use GitHub?</h2>
     <p>GitHub is great because it allows you to make your code public, so that other people can see it and interact with it through pull requests and issues. If you don't want to make your code public, GitHub also allows private repositories. Even if you don't use GitHub to share your code, it's still a great place to store your code, in case your computer breaks or your house catches fire. Finally, GitHub is great for collaboration.</p>
-    <p>However, most if not all of what I have said applies to other places where you can host your repositories, like GitLab and Bitbucket. However, GitHub is the most popular option. In fact, Learnmonkey uses GitHub.</p>
+    <p>However, most if not all of what I have said applies to other places where you can host your repositories, like GitLab and Bitbucket. However, GitHub is the most popular option. In fact, Learnmonkey uses GitHub. Lots of other high-scale tech companies also host some open-source development projects on GitHub, like Microsoft and Meta (Facebook).</p>
 </section>
