--- a/programming/python/bottle/templates.html
+++ b/programming/python/bottle/templates.html
@@ -4,4 +4,4 @@ title: Bottle Templates
 permalink: /programming/python/bottle/templates/
 ---
 
-<h1>Bottles Templates</h1>
+<h1>Bottle Templates</h1>
