--- a/programming/python/discord-py/bot-object.html
+++ b/programming/python/discord-py/bot-object.html
@@ -45,5 +45,5 @@ async def hello(ctx):
 async def echo(ctx, text):
     await ctx.send(text)
     </code></pre>
-    <p>Here, the bot simply echoes back whatever was sent into the echo command. So, if you send <code>$echo Hello!</code>, you the bot sends back <samp>Hello!</samp>.</p>
+    <p>Here, the bot simply echoes back whatever was sent into the echo command. So, if you send <code>$echo Hello!</code>, the bot sends back <samp>Hello!</samp>.</p>
 </section>
