discord.py command arguments example image

--- a/programming/python/discord-py/bot-object.html
+++ b/programming/python/discord-py/bot-object.html
@@ -56,4 +56,5 @@ async def echo(ctx, text):
     await ctx.send(text)
     </code></pre>
     <p>Here, the bot simply echoes back whatever was sent into the echo command. So, if you send <code>$echo Hello!</code>, the bot sends back <samp>Hello!</samp>.</p>
+    <img src="/images/programming/python/discord-py/echo-command-example.png">
 </section>
