no need for line break

--- a/programming/golang/comments.html
+++ b/programming/golang/comments.html
@@ -16,7 +16,7 @@ layout: golang
     <p>In Go, it actually VERY easy to make comments!! To do that, simply write <code>// </code> in front of the text you want to "comment out" (programming talk for making a text a comment). For example, we could have:</p>
     <pre><code class="language-go">// hi
 // there
-// Learnmonkey!</code></pre><br>
+// Learnmonkey!</code></pre>
     <p>Single-line comments can also go at the end of code like this:</p>
     <pre><code>fmt.Println("Learnmonkey is awesome!") // It's true!</code></pre><br>
 </section>
