--- a/programming/golang/comments.html
+++ b/programming/golang/comments.html
@@ -13,7 +13,7 @@ layout: golang
 
 <section>
     <h2>Making Comments In Go</h2>
-    <p>In Go, it actually VERY easy to make comments!! To do that, simply write <code>// </code> in front of the text you want to "comment out" (programming talk for making a text a comment). For example, we could have:</p>
+    <p>To make comments, simply write <code>// </code> in front of the text you want to "comment out" (programming talk for making a text a comment). For example, we could have:</p>
     <pre><code class="language-go">// hi
 // there
 // Learnmonkey!</code></pre>
