--- a/programming/golang/if-else.html
+++ b/programming/golang/if-else.html
@@ -56,14 +56,14 @@ if [condition 1] {
     <pre><code class="language-go">
 if x &lt; 6 {
     if x &lt; 4 {
-        // code inside here only executes if x is smaller than 6 and 4
+        // code here only executes if x is smaller than 6 and 4
     }
 }
     </code></pre>
     <p>The above code could be replaced with the following using logical operators: </p>
     <pre><code class="language-go">
 if x &lt; 6 && x &lt; {
-    // code inside here only executes if x is smaller than 6 and 4
+    // code here only executes if x is smaller than 6 and 4
 } 
     </code></pre>
 </section>
