add quick sentence

--- a/programming/jekyll/index.html
+++ b/programming/jekyll/index.html
@@ -16,6 +16,7 @@ layout: jekyll
     <h2>Why use Jekyll?</h2>
     <p>First of all, you can use Jekyll to make websites that only require static content. It has quite advanced templating features and has built in blogging support. Another big advantage of Jekyll is that it works well with <a href="https://pages.github.com">GitHub Pages</a>, which is basically free hosting provided by GitHub.</p>
     <p>In fact, Learnmonkey uses Jekyll. We chose it because it works well with GitHub Pages and we didn't have to constantly repeat ourselves while writing our content or write a complicated script to do the same thing.</p>
+    <p>You can find a list of some websites that use Jekyll <a href="https://jekyllrb.com/showcase/">here</a>.</p>
 </section>
 
 <section>
