--- a/programming/python/for-loops.html
+++ b/programming/python/for-loops.html
@@ -15,3 +15,10 @@ for <i>element</i> in <i>iterable</i>:
     # do something
     </code></pre>
 </section>
+
+<section>
+    <h2>The <code>range</code> function</h2>
+    <p>The <code>range</code> function is a built-in Python function which returns integers from a start number to an end number, where the start and end numbers are included. Below is the syntax: </p>
+    <pre><code class="language-python">range(<i>start</i>, <i>end</i>)</code></pre>
+    <p>The <code>range</code> function is useful for doing something a certain amount of times.</p>
+</section>
