--- a/programming/python/for-loops.html
+++ b/programming/python/for-loops.html
@@ -21,4 +21,7 @@ for <i>element</i> in <i>iterable</i>:
     <p>The <code>range</code> function is a built-in Python function which returns integers from a start number to an end number, where the start and end numbers are included. Below is the syntax: </p>
     <pre><code class="language-python">range(<i>start</i>, <i>end</i>)</code></pre>
     <p>The <code>range</code> function is useful for doing something a certain amount of times.</p>
+    <p>If you put just one number in the <code>range</code> function, the <code>range</code> function will default to: </p>
+    <pre><code class="language-python">range(0, <i>number</i> - 1)</code></pre>
+    <p>It goes from zero to the number minus one so it's easier to go through a list.</p>
 </section>
