discord.py embed generator

--- a/programming/python/discord-py/embeds.html
+++ b/programming/python/discord-py/embeds.html
@@ -11,3 +11,8 @@ permalink: /programming/python/discord-py/embeds/
     <p>An embed is basically a fancy message that can have images, content, fields, and more. They are an incredibly powerful tool.</p>
     <img src="/images/programming/python/discord-py/embed-example.png" alt="An example of a Discord.py embed">
 </section>
+
+<section>
+    <h2>Embed Generator</h2>
+    <p>There is a <a href="https://cog-creators.github.io/discord-embed-sandbox/">very handy tool</a> which generates Discord.py embeds for you.</p>
+</section>
