update tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -16,6 +16,7 @@ layout: default
                     <li><a href="/programming/python/tkinter/">Tkinter</a></li>
                     <li><a href="/programming/python/bottle/">Bottle</a></li>
                     <li><a href="/programming/python/pymongo/">PyMongo</a></li>
+                    <li><a href="/programming/python/fastapi/">FastAPI</a></li>
                     <li><a href="/programming/python/discord-py/">Discord.py</a></li>
                 </ul>
             </li>
