--- a/programming/python/fastapi/index.html
+++ b/programming/python/fastapi/index.html
@@ -5,3 +5,8 @@ permalink: /programming/python/fastapi/
 ---
 
 <h1>Introduction to FastAPI</h1>
+
+<section>
+    <h2>What is FastAPI?</h2>
+    <p>FastAPI is a <a href="/programming/python/">Python</a> module.</p>
+</section>
