new page + title change

--- a/programming/python/discord-py/bot-object.html
+++ b/programming/python/discord-py/bot-object.html
@@ -1,6 +1,6 @@
 ---
 layout: discord-py
-title: Discord.py Bot
+title: Discord.py Bot Object
 permalink: /programming/python/discord-py/bot-object/
 ---
 
