--- a/programming/python/fastapi/index.html
+++ b/programming/python/fastapi/index.html
@@ -8,5 +8,15 @@ permalink: /programming/python/fastapi/
 
 <section>
     <h2>What is FastAPI?</h2>
-    <p>FastAPI is a <a href="/programming/python/">Python</a> module.</p>
+    <p>FastAPI is a <a href="/programming/python/">Python</a> web framework module. It's used for making API applications and uses simple HTTP requests and routes. FastAPI is very simple and fast to get started with, as the name suggests. Some pros of using FastAPI are:</p>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </section>
