--- a/programming/python/fastapi/index.html
+++ b/programming/python/fastapi/index.html
@@ -19,5 +19,5 @@ permalink: /programming/python/fastapi/
         <li>Robust</li>
         <li>Standards-based</li>
     </ul>
-    <img src="/images/programming/python/fastapi/logo.png" alt="FastAPI Logo">
+    <img src="/images/programming/python/fastapi/logo.png" alt="FastAPI Logo" style="width:100%;height:100%;">
 </section>
