--- a/programming/python/fastapi/index.html
+++ b/programming/python/fastapi/index.html
@@ -19,5 +19,5 @@ permalink: /programming/python/fastapi/
         <li>Robust</li>
         <li>Standards-based</li>
     </ul>
-    <a href="https://fastapi.tiangolo.com" target="_blank"></a><img src="/images/programming/python/fastapi/logo.png" alt="FastAPI Logo" style="width:65%;height:65%;">
+    <img src="/images/programming/python/fastapi/logo.png" alt="FastAPI Logo" style="width:65%;height:65%;">
 </section>
