--- a/programming/python/discord-py/cogs.html
+++ b/programming/python/discord-py/cogs.html
@@ -28,3 +28,11 @@ class SomeCommands(commands.Cog):
     <p>Then, inside of the class, we have a multiline comment called a <em>docstring</em>. Docstrings are what Discord.py uses for the built-in help command.</p>
     <p>Then, we have the commands inside of the cog. Notice that the function has <code>self</code> as the first argument instead of <code>ctx</code>. This is because we are inside a class and functions inside classes always have <code>self</code> as their first arguments. Also notice that instead of using the <code>@bot.command()</code> decorator, we now use <code>@commands.command()</code>. This is because we don't have access to the bot object inside of the cog class.</p>
 </section>
+
+<section>
+    <h2>Adding the Cog to the Bot</h2>
+    <p>Finally, we need to add the cog to our bot object. This can be simply achieved by putting the following line of code into our Python code: </p>
+    <pre><code class="language-python">
+bot.add_cog(SomeCommands)
+    </code></pre>
+</section>
