--- a/donating.html
+++ b/donating.html
@@ -4,5 +4,5 @@ permalink: /donating/
 layout: default
 ---
 
-<h1>Donating to Learnmonkey</h1>
+<h1>Donating</h1>
 <p>Learnmonkey doesn't have ads and will remain without ads. Currently, we do not accept donations, but in the future we will. In the meantime, consider contributing to a local charity and sharing Learnmonkey with your friends!</p>
