--- a/programming/python/fastapi/setup.html
+++ b/programming/python/fastapi/setup.html
@@ -8,3 +8,4 @@ permalink: /programming/python/fastapi/setup/
 
 <p>To use FastAPI, we of course need to install the Python module. We can easily do this using PIP: </p>
 <pre><code class="language-bat">pip install "fastapi[all]"</code></pre>
+<p>The above command installs FastAPI and all of its optional dependencies.</p>
