--- a/programming/python/fastapi/first-api.html
+++ b/programming/python/fastapi/first-api.html
@@ -41,3 +41,8 @@ INFO:     Application startup complete.
 {"message":"Hello FastAPI!"}
     </samp></pre>
 </section>
+
+<section>
+    <h2>Interactive API Docs</h2>
+    <p>One cool feature of FastAPI is that when you make your API, FastAPI automatically generates interactive API docs. You can find it by going to <a href="http://127.0.0.1:8000/docs">127.0.0.1:8000/docs</a>. If you don't like that, there is an alternative version which you can find by going to <a href="http://127.0.0.1:8000/redoc">127.0.0.1:8000/redoc</a>.</p>
+</section>
