--- a/programming/python/fastapi/first-api.html
+++ b/programming/python/fastapi/first-api.html
@@ -34,12 +34,10 @@ INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)
 INFO:     Started reloader process [28720]
 INFO:     Started server process [28722]
 INFO:     Waiting for application startup.
-INFO:     Application startup complete.
-    </samp></pre>
+INFO:     Application startup complete.</samp></pre>
     <p>You should now be able to go to <a href="http://127.0.0.1:8000">127.0.0.1:8000</a> and see: </p>
     <pre><samp>
-{"message":"Hello FastAPI!"}
-    </samp></pre>
+{"message":"Hello FastAPI!"}</samp></pre>
 </section>
 
 <section>
