--- a/programming/python/discord-py/setup.html
+++ b/programming/python/discord-py/setup.html
@@ -41,9 +41,7 @@ permalink: /programming/python/discord-py/setup/
 <section>
     <h2>Installing Discord.py</h2>
     <p>To install Discord.py, run the following command in your command line: </p>
-    <pre><code class="language-bat">
-pip install discord.py
-    </code></pre>
+    <pre><code class="language-bat">pip install discord.py</code></pre>
     <small>If PIP doesn't work, read our <a href="/programming/python/articles/troubleshooting-pip/">Troubleshooting PIP</a> article.</small>
     <p>To test if your install worked, try running the following Python script: </p>
     <pre><code class="language-python">
