--- a/programming/python/pymongo/setup.html
+++ b/programming/python/pymongo/setup.html
@@ -14,9 +14,7 @@ permalink: /programming/python/pymongo/setup/
 <section>
     <h2>Installing PyMongo</h2>
     <p>After making our database, we need to install the PyMongo Python module using PIP: </p>
-    <pre><code class="language-bat">
-pip install pymongo
-    </code></pre>
+    <pre><code class="language-bat">pip install pymongo</code></pre>
     <small>If PIP doesn't work, read our <a href="/programming/python/articles/troubleshooting-pip/">Troubleshooting PIP</a> article.</small>
     <p>After using PIP, run the following Python code to test if you installed it correctly: </p>
     <pre><code class="language-python">
