edit settings page

--- a/settings.html
+++ b/settings.html
@@ -5,6 +5,7 @@ layout: default
 ---
 
 <section>
-    <h1>Learnmonkey Settings</h1>
+    <h1>Settings</h1>
+    <p>Here, you can customize Learnmonkey. Your settings are automatically saved in your cookies.</p>
     <a onclick="switchDark()" id="toggledarklight">Toggle Dark</a>
 </section>
