add line breaks

--- a/programming/golang/if-else.html
+++ b/programming/golang/if-else.html
@@ -27,7 +27,7 @@ if [condition] {
     // do something if the condition is not met
 }
     </code></pre>
-    <small><i class="fas fa-exclamation-circle"></i>The last curly bracket of the if statement and the start of the else statement have to be on the same line! Otherwise, you'd get an error.</small>
+    <small><i class="fas fa-exclamation-circle"></i>The last curly bracket of the if statement and the start of the else statement have to be on the same line! Otherwise, you'd get an error.</small><br>
     <small><i class="fas fa-exclamation-circle"></i>You can have an if statement without an else, but you can't have an else statement without an if!</small>
 </section>
 
@@ -46,7 +46,7 @@ if [condition 1] {
 }
     </code></pre>
     <p>We can chain as many else if statements together as we want.</p>
-    <small><i class="fas fa-exclamation-circle"></i>The last curly bracket of each statement has to be on the same line as the next statement.</small>
+    <small><i class="fas fa-exclamation-circle"></i>The last curly bracket of each statement has to be on the same line as the next statement.</small><br>
     <small><i class="fas fa-exclamation-circle"></i>You can have an if and else if statement without an else statement, but you can't have an else if statement without an if!</small>
 </section>
 
