--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -57,7 +57,7 @@ func main() {
 7
 8
 9
-    </samp></pre>p
+    </samp></pre>
     <p>In the code, we declare a loop counter called <code>i</code> and set it to zero. While <code>i</code> is smaller than 10, we keep adding one to <code>i</code> and printing out <code>i</code>.</p>
     <p>We could have done something like this too:</p>
     <pre><code class="language-go">
