--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -40,7 +40,7 @@ package main
 import "fmt"
         
 func main() {
-    for i := 0; i =&lt; 10; i++ {
+    for i := 0; i &#60;= 10; i++ {
         fmt.Println(i)
     }
 }
