--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -32,7 +32,7 @@ for <i>initialization</i>; <i>condition</i>; <i>update</i> {
 }
     </code></pre>
     <p><code><i>initialization</i></code> initializes a loop counter variable, which will be used to control how many times we will be running the code. <code><i>condition</i></code> is the condition that has to be met in order for the loop counter to be initialized. Finally, <code><i>update</i></code> updates the loop counter.</p>
-    <small><i class="fas fa-exclamation-circle"></i>Remember to put the three parts in the correct order! If you do something like <code>for <i>initialization</i>; <i>update<i>; <i>condition</i></code> your code will run forever!</small>
+    <small><i class="fas fa-exclamation-circle"></i>Remember to put the three parts in the correct order! If you do something like <code>for <i>initialization</i>; <i>update</i>; <i>condition</i></code> your code will run forever!</small>
     <p>Below is an example of a for loop:</p>
     <pre><code class="language-go">
 package main
