--- a/programming/golang/arrays.html
+++ b/programming/golang/arrays.html
@@ -50,8 +50,7 @@ fmt.Println(websites[1])
 Learnmonkey
 Stack Overflow
 GitHub
-Wikipedia
-    </samp></pre>
+Wikipedia</samp></pre>
 </section>
 
 <section>
@@ -67,7 +66,7 @@ companies[1] = "Microsoft"
 fmt.Println(companies)
     </code></pre>
     <p>The above code returns: </p>
-    <pre>[Google Microsoft Apple Twitter]</pre>
+    <pre><samp>[Google Microsoft Apple Twitter]</samp></pre>
 </section>
 
 <section>
