--- a/programming/golang/comments.html
+++ b/programming/golang/comments.html
@@ -18,7 +18,7 @@ layout: golang
 // there
 // Learnmonkey!</code></pre>
     <p>Single-line comments can also go at the end of code like this:</p>
-    <pre><code>fmt.Println("Learnmonkey is awesome!") // It's true!</code></pre><br>
+    <pre><code class="language-go">fmt.Println("Learnmonkey is awesome!") // It's true!</code></pre>
 </section>
 
 <section>
