--- a/programming/golang/pointers.html
+++ b/programming/golang/pointers.html
@@ -33,9 +33,7 @@ var x int = 5
 fmt.Println(&x)
     </code></pre>
     <p>The above code returns a hexadecimal number for the address of where the variable <code>x</code> is stored in memory: </p>
-    <pre><samp>
-0xc000016190
-    </samp></pre>
+    <samp>0xc000016190</samp>
     <p>We can also set the address to a pointer variable: </p>
     <pre><code class="language-go">
 var y int = 10
@@ -59,7 +57,5 @@ func main() {
 }
     </code></pre>
     <p>The above code returns: </p>
-    <pre><samp>
-5
-    </samp></pre>
+    <samp>5</samp>
 </section>
