math index page

--- a/math/index.html
+++ b/math/index.html
@@ -5,6 +5,9 @@ layout: default
 ---
 
 <section>
-    <p>Currently, we have no math content on Learnmonkey, but we are currently working on it.</p>
+    <p>Below is a list of math subjects we cover on Learnmonkey: </p>
+    <ul>
+        <li><a href="/math/algebra/">Algebra</a></li>
+    </ul>
     <img src="/images/math/math.jpg" alt="Math">
 </section>
