Update home page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
 <section>
     <h1>Hello and welcome to Learnmonkey!</h1>
     <p>Welcome to the Learnmonkey website! Currently, Learnmonkey has only programming lessons, but we will be expanding to more subjects soon. You can find lessons in the navbar or find one in <a href="/tutorial-index/">tutorial index</a>.</p>
+    <p>Most of Learnmonkey's tutorials are currently a work-in-progress. You can identify tutorials that are a work-in-progress with an alert at the top of the tutorial.</p>
 </section>
 
 <section>
