--- a/404.html
+++ b/404.html
@@ -19,10 +19,9 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>Error 404!</h1>
-
+  <h1>404 Not Found</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
   <p>Try checking the spelling.</p>
-  <p>If you think this is an error, please <a href="mailto:learnmonkey2@gmail.com">contact us</a>.</p>
+  <p>If you think this is an error, please <a href="mailto:learnmonkey2@gmail.com">email us</a>.</p>
 </div>
